<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idade"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/height_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altura_m"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/weight_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peso_kg"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stats_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_views"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/age_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            tools:ignore="Autofill, LabelFor" />

        <EditText
            android:id="@+id/height_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            tools:ignore="Autofill, LabelFor" />

        <EditText
            android:id="@+id/weight_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relatorio_nutricional"
            android:onClick="button_action"/>
    </LinearLayout>
</RelativeLayout>