<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relatorio_nutricional"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_report"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/age_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/idade"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peso"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/height_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/altura"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/imc_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imc"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imc"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/classification_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classificao"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/show_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:typeface="monospace"
            tools:ignore="Autofill, LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp">

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_action"
            android:text="@string/realizar_novo_calculo" />
    </LinearLayout>
</RelativeLayout>